# qib

./: .gitignore  .ini  .qib  CMakeLists.txt  README.md  cfg.q  ib.q  ini.q  init.q
.conda/: build.sh  init.q  meta.yaml
app/: debug.q  debug.sh  ib.q
cppclient/: EClient.h  EWrapper.h  HistoricalTick.h
src/: IBClient.cpp  IBClient.h  helpers.h  k.h  qib.cpp  qib.h
test/: CMakeLists.txt  main_test.cbp  main_test.cpp  main_test}.cbp  test_qib.q
test/fixtures/: cfd.csv  eustocks.csv  fop.csv  news.csv  syms.csv  timer.q  tree.q  ty.q
